# pearson

./: .env.example  .geminiexclude  .gitignore  README.html  README.md  __init__.py  __main__.py  clean_legacy.py  config.py  emekstr.py  gemini.md  import_legacy.py  main.py  makefile  migration.py  models.py  pyproject.toml  requirements.txt  run.py  run_api.py  run_web.py  serve.iis  serve.py  setup.py  web.config  web.old
.github/workflows/: tests.yml
api/: __init__.py  courses.py  webhooks.py
cli/: commands.py  course_injector.py  report_commands.py  setup.py
content/specs/: A03.md  A04.md  A05.md  A06.md  A08.md  B05.md  C01.md  C05.md  C06.md  D01.md  E03.md  E04.md  E07.md  F01.md  G01.md  H01.md  H02.md  H03.md  H04.md  H06.md  H09.md  H10.md  H12.md  H15.md  I01.md  I02.md  J04.md  K601.md  KE01.md  KS01.md  L01.md  M01.md  M02.md  M04.md  M05.md  N02.md  N06.md  N07.md  N11.md  N14.md  (+39 more)
crminaec/: __about__.py  __init__.py  addcontent.py  adddetails.txt  atomize.py  config.py  details.txt  main.py  routes.py  run_api.py  testintegrity.py
crminaec/api/: __init__.py  courses.py  webhooks.py
crminaec/auth/: routes.py
crminaec/cli/: __init__.py  add_coursebymd.py  commands.py  course_injector.py  report_commands.py  setup.old  setup.py  webhooks.py
crminaec/core/: database.py  email.py  models.py  security.py
crminaec/core/interop/: manager.py
crminaec/core/interop/google_docs/: client.py  config.py  parser.py
crminaec/core/reporting/: __init__.py  multi_exporter.py  template_manager.py
crminaec/core/templates/: course_overview.j2  lesson_plan.j2  syllabus.j2
crminaec/interop/: __init__.py
crminaec/interop/google_docs/: client.py  config.py  parser.py
crminaec/reports/: __init__.py  template_manager.py
crminaec/static/content/: order.html
crminaec/static/css/: style.css
crminaec/templates/: portal_home.html
crminaec/web/: __init__.py  forms.py  routes.py
crminaec/web/routes/: assignments.py
crminaec/web/static/: service-worker.js
crminaec/web/templates/: base.html  portal_home.html  profile.html  register.html
docs/: MI-Tendering PreGMP_Draft.doc  MI-Tendering PreGMP_Draft.docx  Pearson Course Management System v2.docx  documentation.html  requirements.old
interop/: manager.py
interop/google_docs/: __init__.py  client.py  config.py  parser.py
migrations/versions/: a9f7a2bbc3f5_initial_test.py
output/: lesson_1_PY101.html  lesson_1_PY101.md  lesson_1_WD101.md  lesson_2_PY101.html  lesson_2_PY101.md  lesson_2_WD101.md  lesson_3_PY101.html  lesson_3_PY101.md  overview_PY101.html  overview_PY101.md  overview_WD101.md  syllabus_PY101.html  syllabus_PY101.md  syllabus_WD101.md  test_overview.md  test_syllabus.md
pearson/: __init__.py  config.py  main.py  models.py  run_api.py  run_cli.py  run_web.py
pearson/api/: __init__.py  courses.py  webhooks.py
pearson/cli/: __init__.py  add_coursebymd.py  argparse_setup.py  commands.py  course_injector.py  report_commands.py  setup.py
pearson/interop/: __init__.py  manager.py
pearson/interop/google_docs/: __init__.py  __init__.service account.old  client.py  config.py  parser.py
pearson/reports/: __init__.py  multi_exporter.py  template_manager.py
pearson/reports/templates/: syllabus.j2
pearson/web/: forms.py  routes.py
pearson/web/routes/: templates.py
pearson/web/templates/: base.html  course_detail.html  courses.html  folders.html  sync_log.html
portal/: __init__.py  config.py  main.py  run_api.py
portal/api/: __init__.py  courses.py  webhooks.py
portal/core/: coremodels.py
portal/core/cli/: commands.py  course_injector.py  report_commands.py  setup.py
portal/core/reporting/: __init__.py  multi_exporter.py  template_manager.py
portal/static/content/: compliance.md
portal/web/: __init__.py
portal/web/routes/: documents.py  modules.old  templates.py
proxy/: addcontent.py  master_lib.txt
reports/: __init__.py  multi_exporter.py  template_manager.py
shared/: __init__.py  models.py
static/content/specs/: A07.md  B01.md  B02.md  C02.md  C03.md  F02.md  F04.md  H07.md  H13.md  I07.md  J02.md  KL06.md  L02.md  N03.md  N04.md  N10.md  P06.md  S03.md  S10.md  S19.md  S27.md  S32.md  X07.md
static/css/: style.css
static/js/: main.js
static/mdfiles/: CGIDCS251119.md  CGIDPD251119.md
tests/: basic_setup_test.py  conftest.py  day1.py  day2.py  factories.py  google_test.py  pytest.ini  requirements.txt  simple_test_models.py  test_all_factories.py  test_factory_validation.py  test_gdocsbygemini.py  test_googledocs.py
tests/functional/: test_api.py  test_routes.py
tests/integration/: test_db.py
tests/unit/: test_models.py
utilities/: atomize.py  testintegrity.py
web/: __init__.py  routes.py  utils.py
web/routes/: audit.py  modules.py
web/templates/: course_edit.html  import.html  index.html
zip/: README.md  requirements.txt  serve.py  web.config
(+74 files in other folders)
